--- a/HTML edit.html
+++ b/HTML edit.html
@@ -4,6 +4,8 @@
     <title>Test github</title>
 </head> 
 <body>
+    <img src="logo freefire.png"/>
     <h1>Hello world !!!</h1>
     <h2>Welcome to my website</h2>
+    <b>UI Design</b>
 <body>
